fixed font not showing correctly

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,10 @@
 
+@font-face{
+    font-family: "Myriad-Pro";  
+    src: url(http://www.anaveer.in/honda/font/MYRIADPRO-REGULAR.OTF) format("truetype");
+}
+
 body {
-    font-family: "Myriad Pro";
     font-size: 17px;
     color: #6fb32c;
     background-color: #17172c;
